# libmrhsrv

./: .gitignore  AUTHORS.txt  CMakeLists.txt  LICENSE.txt  README.md  README.txt  TODO.txt  VERSION.txt
include/libmrhsrv/: libmrhsrv.h
include/libmrhsrv/libmrhsrv/: MRH_Server.h  MRH_ServerActor.h  MRH_ServerConnection.h  MRH_ServerRevision.h  MRH_ServerSizes.h  MRH_ServerTypes.h
include/libmrhsrv/libmrhsrv/Communication/: MRH_CommunicationApp.h  MRH_CommunicationClient.h  MRH_CommunicationOpCode.h  MRH_CommunicationPlatform.h  MRH_NetMessage.h  MRH_ServerCommunication.h
include/libmrhsrv/libmrhsrv/Error/: MRH_ServerError.h
src/libmrhsrv/: MRH_Server.c  MRH_ServerConnectionInternal.h  MRH_ServerOpCode.h  MRH_ServerRevision.c  MRH_ServerTypesInternal.h
src/libmrhsrv/Communication/: MRH_CommunicationApp.c  MRH_CommunicationAuth.c  MRH_CommunicationAuth.h  MRH_CommunicationClient.c  MRH_CommunicationPlatform.c  MRH_ServerCommunication.c
src/libmrhsrv/Communication/MsQuic/: MRH_MsQuic.c  MRH_MsQuic.h  MRH_MsQuicContext.c  MRH_MsQuicContext.h
src/libmrhsrv/Communication/NetMessage/: MRH_NetMessageV1.c  MRH_NetMessageV1.h
src/libmrhsrv/Error/: MRH_ServerError.c  MRH_ServerErrorInternal.h
